src/Styles/Home.css
#Home .header {
  position: relative;
  height: 100vh;
  color: #fff;
  display: flex;
  overflow: hidden; /* Prevent content overflow */
  background-color: #000000;
}
#Home .light-bg {
  /* background-image: url("../Assets/test.svg"); */
  background-attachment: fixed;
  background-position: center;
  background-repeat: repeat;
  background-size: cover;
}
.header .content {
  padding-top: 5vh;
}
.title-sub-1 {
  font-family: "Julius Sans One";
  font-style: normal;
  font-weight: 400;
  font-size: clamp(0.9rem, 2.7vw + 0.6rem, 2rem);
  line-height: 44px;
  color: #ff3d7c;
  margin: 50px 0;
}

.title-name {
  font-size: clamp(2.9rem, 4vw + 1rem, 5.7rem);
}
.title-sub-2-container {
  margin-bottom: 3em;
}
.title-sub-2 {
  font-weight: 400;
  font-size: clamp(0.4rem, 2.5vw + 0.5rem, 1.3rem);
  letter-spacing: 0.4em;
  color: #ff3d7c;
  display: inline;
}
.title-sub-2:not(:first-of-type) {
  margin-left: clamp(0.15rem, 4vw + 0.5rem, 1.3rem);
}
.full-page-header button {
  margin-top: 8%;
}

#Home .content {
  position: relative;
  z-index: 1;
  margin: 10% 0 0 8%;

  text-align: left;
  width: auto;
  height: auto;
  display: block;
}

@media screen and (max-width: 720px) {
  .title-sub-1 {
    margin: 0;
  }
  .header .content {
    padding-top: 15vh;
  }
}
@media screen and (max-width: 590px) {
  .header .content h1 {
    text-align: center;
  }
  #Home .content {
    margin: 10% auto;
    text-align: center;
  }
  .title-sub-2 {
    display: block;
    text-align: center;
    /* color: white; */
    letter-spacing: 0.2em;
  }
  .title-sub-2:not(:first-of-type) {
    margin-left: auto;
  }
}
/* focus stuff */
#focus {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
  padding: 20px;
}
#focus p {
  margin: 0;
}

/* aboout me */
.star-list {
  width: 1.3em;
}

#about .about-container {
  /* padding: 5% 0 5% 2%; */
  display: grid;
  grid-template-columns: 1fr 2fr;
  align-items: stretch;

  gap: 20px;
  /* padding-right: 0; */
  align-items: center;
  margin-bottom: 1em;
}
#about article {
  /* background-color: white; */
  padding: 20px 40px;
  /* box-shadow: 2px 2px 22.1px rgba(191, 191, 191, 0.25); */
  border-radius: 16px;
}
.feature-list h3 {
  /* color: var(--gold);
  text-shadow: 0px 0px 8.2px rgba(0, 0, 0, 0.14); */
  color: black;

  font-family: "Kaisei Decol";
  font-style: normal;
  font-weight: bold;
  font-size: 1.1em;
  line-height: 35px;
  margin: 0;
}
.unique-list {
  background-color: white;
  padding: 20px 40px;
  box-shadow: 2px 2px 22.1px rgba(191, 191, 191, 0.25);
  border-radius: 16px;
  justify-content: center;
}
.feature-icon-text {
  display: grid;
  grid-template-columns: auto auto;
  gap: 1em;
}
.feature-list.img-text {
  align-items: baseline;
}

.feature-list-icon {
  max-width: 100px;
}
.feature-list .star-list {
  width: 15px;
}
.me-pic {
  width: 100%;
  max-height: 310px;
  aspect-ratio: 1;
  /* height: auto; */
  object-fit: cover;
  border-radius: 16px;

  display: flex;
  align-items: center; /* Center content vertically */
  justify-content: center; /* Center content horizontally */
}

/* latest projects */
#sort-btn-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.sort-desc {
  color: #666666;
  font-weight: bold;
  margin: 2em;
}
.sort-projects {
  text-align: center;
  background: #000000;
  line-height: normal;
  border: 1px solid #d3cfdc;
  border-radius: 100px;
  padding: 0.5em 1em;
  margin: 0.7em;
  min-width: 100px;
  box-sizing: border-box;
  font-family: "Julius Sans One", sans-serif;
  font-weight: bold;
  background: linear-gradient(
    90deg,
    #1b1919 0%,
    #3e3939 50%,
    #ff4fed 50%,
    #414eca 97.5%
  );
  background-size: 200% 200%;
  cursor: pointer;
  display: inline-block;
}

/* Hide the radio buttons */
.sort-projects input[type="radio"] {
  display: none;
}

/* Style for active and hover states */
.sort-projects:hover,
.sort-projects-active {
  background-position: -100%;
}

/* ----------------------------------------------projects---------------------------------------------- */
#latest-projects {
  /* padding: 2em; */
  /* background-image: url("../Assets/header-bg2.png");
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
}
.projects-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
  margin-bottom: 3em;
}
.projects-grid a {
  text-decoration: none;
}
#latest-projects h2 {
  text-align: center;
}
#latest-projects h3 {
  margin-top: 0;
}

#latest-projects article {
  width: 100%;
  height: 100%;
  margin: auto;
  border-radius: 12px;

  box-shadow: 0px 4px 5.3px rgba(0, 0, 0, 0.74);
  border-radius: 12px;
}
#latest-projects article div {
  padding: 1em 1.5em 1.5em 1.5em;
}
#latest-projects article {
  transition: all 0.2s ease-in-out;
  background-image: linear-gradient(var(--dark-bg2), #17171c);
}
#latest-projects article:hover {
  transform: scale(1.05);
}
/* #latest-projects article button {
  width: 100%;
} */
#latest-projects img {
  width: 100%;
  aspect-ratio: 16/9;
  object-fit: cover;
  border-radius: 12px 12px 0 0;
}
.project-hover {
  padding: 0;
  margin: 0;
  background-color: var(--dark-bg2);
  border: 0;
  border-radius: 12px 12px 0 0;
}
.num {
  font-size: 1.4em;
}

/* ---------------featured projects--------------- */
#latest-projects .featured article {
  /* border: 2px #D79736 solid; */
  /* border-radius: 12px; */
  border: double 2px transparent;
  border-radius: 12px;
  background-image: linear-gradient(var(--dark-bg2), #17171c),
    linear-gradient(to right, #bf510f, gold);
  background-origin: border-box;
  background-clip: content-box, border-box;
}
#latest-projects .featured {
  max-height: 500px;
}
#latest-projects .featured img {
  max-height: 100%;
}
.featured-txt {
  color: var(--gold);
  margin: 0;
}
#latest-projects article .img-text {
  padding: 0;
}
.star-img {
  width: 12px !important;
  object-fit: initial !important;
  margin-bottom: 4px;
  margin-right: 2px;
}

/* ----------------------------------explore more projects---------------------------------- */
#explore-projects {
  /* padding: 4em 2em; */
}
#explore-projects h2 {
  margin-top: 0;
  text-align: center;
}
#explore-projects button {
  display: block;
  color: white;
  width: 100%;
  font-size: 1.3rem;
  height: 6em;
  margin: 1em 0;
  padding: 0;
  box-shadow: 2px 2px 22.1px rgba(191, 191, 191, 0.25);
  border: none;
  border-radius: 15px;
}
#explore-projects button div {
  /* transition: backdrop-filter 0.5s ease; */
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
  margin: 0;
  border-radius: 15px;

  background: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0.95) 0%,
    rgba(93, 93, 93, 0.95) 100%
  );
  backdrop-filter: blur(5.15px);
  width: 100%;
  height: 100%;
}
#explore-projects button div:hover {
  background: linear-gradient(
    85.18deg,
    rgba(229, 111, 232, 0.86) 23.29%,
    rgba(87, 134, 255, 0.86) 85.02%
  );
  backdrop-filter: blur(0);
  filter: drop-shadow(0px 4px 17.7px rgba(0, 0, 0, 0.37));
}
#uiux-btn {
  background-image: url("../Assets/btn-uiux.jpg");

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
#dev-btn {
  background-image: url("../Assets/btn-dev.jpg");

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
#artdes-btn {
  background-image: url("../Assets/btn-art.jpg");

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
#explore-projects img {
  width: 2em;
  stroke: white;
}
/* ----------------------------------contact me---------------------------------- */
#contact-me {
  padding: 3em 8%;
}
#contact-me h2 {
  margin-top: 0;
  text-align: center;
}

/* ----------------------------------reppnsive---------------------------------- */
@media screen and (min-width: 1071px) {
  #latest-projects .featured {
    grid-column: 1/4;
  }
  #latest-projects .featured article {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-auto-flow: dense;
  }
  #latest-projects .featured img {
    grid-column: 2/4;
    aspect-ratio: auto;
    border-radius: 0 12px 12px 0;
  }
}
@media screen and (max-width: 1070px) {
  .projects-grid {
    grid-template-columns: 1fr 1fr;
  }
  #latest-projects .featured {
    grid-column: 1/3;
  }
  #latest-projects .featured article {
    display: grid;
    grid-template-columns: 1fr 2fr;
  }
  #latest-projects .featured img {
    grid-column: 2/3;
    aspect-ratio: auto;
  }
  #latest-projects .featured div {
    grid-column: 1/2;
    grid-row: 1/2;
  }
}
@media screen and (max-width: 1000px) {
  .feature-list .col-2 {
    grid-template-columns: 1fr;
  }
  /* .feature-icon-text.even .feature-list-icon {
    grid-column: 2/3;
  }
  .feature-icon-text.even div {
    grid-row: 1/2;
  } */
}

@media screen and (max-width: 920px) {
  #about {
    padding: 5% 2%;
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
  }
  #about article {
    border-radius: 16px;
  }
}
@media screen and (min-width: 830px) {
  #latest-projects .featured img {
    border-radius: 0 12px 12px 0;
    height: 100%;
  }
}

@media screen and (max-width: 830px) {
  .projects-grid {
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
  }
  #latest-projects .featured {
    grid-column: 1/2;
  }
  #latest-projects .featured article {
    display: grid;
    grid-template-columns: 1fr;
  }
  #latest-projects .featured img {
    grid-column: 1/2;
    aspect-ratio: auto;
  }
  #latest-projects .featured div {
    grid-column: 1/2;
    grid-row: 2/3;
  }
}
@media screen and (max-width: 800px) {
  #about .about-container {
    grid-template-columns: 1fr;
  }
  .about-container img {
    max-width: 300px;
    margin: auto;
  }
}

@media screen and (max-width: 580px) {
  #focus {
    display: block;
  }
  #focus div {
    margin: 1.4em auto;
  }
}
@media screen and (max-width: 485px) {
  .feature-icon-text {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 1em;
  }
  .feature-icon-text p {
    text-align: center;
  }
  .feature-icon-text .img-text {
    justify-content: center;
  }
}
@media screen and (max-width: 336px) {
  .unique-list {
    padding: 20px 30px;
  }
}

